Writes words to hierarchical dir to track locks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.29)
+cmake_minimum_required(VERSION 3.26)
 project(mergasort_controller1 C)
 
 set(CMAKE_C_STANDARD 11)
@@ -15,4 +15,4 @@ add_executable(mergasort_controller1
     src/msc_functions.c
     src/msc_functions.h)
 
-target_link_libraries(mergasort_controller1 ../lib/libws.a)
+target_link_libraries(mergasort_controller1 /root/mergasort_controller/lib/libws.a)
